--- a/componentes/react/componentes/VideoIframe/styles.css
+++ b/componentes/react/componentes/VideoIframe/styles.css
@@ -1,22 +1,10 @@
-.ContainerInfoProduct{
+.ContainerVideoPlayer{
 
 }
-.ContainerInfo{
+.ContainerVideo{
 
 }
 
-.ProductName{
+.VideoIframe{
     
-}
-
-.ProductDescription{
-
-}
-
-.ProductColorTalle{
-
-}
-
-.ProductPrice{
-
 }
