--- a/componentes/react/componentes/VideoIframe/styles.css
+++ b/componentes/react/componentes/VideoIframe/styles.css
@@ -1,10 +1,18 @@
 .ContainerVideoPlayer{
-
+    width: 100%;
+    height: 100%;
 }
 .ContainerVideo{
+    width: 100%;
+    height: 100%;
+}
 
+.ContainerIframe{
+    width: 100%;
+    height: 100%;
 }
 
 .VideoIframe{
-    
+    width: 100%;
+    height: 80vh;
 }
